# hermes-test

./: .gitignore  BENCHMARKS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  claude-resume.md  decisions.md  package.json
.claude/references/: challenges.md  component-rendering.md  coverage-approaches.md  coverage-strategy.md  hardening-assessment.md  mock-strategies.md  mock-strategy.md  next-issue.md  performance.md  shadow-wrappers.md  shallow-rendering-fixes.md  todo.md  v8-evaluation-summary.md  v8-findings-and-benchmarks.md
.claude/skills/hermes-test/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  release.yml
bench/fixtures-jest/: bench-helpers.ts  hooks-1000.test.ts  hooks-50.test.ts  jest.config.swc.js  jest.config.ts-jest.js  package.json  pure-10.test.ts  pure-50.test.ts  useCounter.ts
crates/hermes-bridge/: CMakeLists.txt
crates/hermes-bridge/include/: bridge.h
crates/hermes-bridge/src/: bridge.cpp  hermes_compile.cpp  vm_eval.cpp
crates/hermes-test-cli/: Cargo.toml  build.rs
crates/hermes-test-cli/src/: bundler.rs  coverage.rs  hermes.rs  main.rs  metro.rs
crates/hermes-test-cli/src/bundler/: config.rs  entry.rs  esbuild.rs  mod.rs  patches.rs  shadow.rs  transform.rs
crates/hermes-test-cli/src/engine/: hermes.rs  mod.rs  v8_engine.rs
crates/metro-test-cli/: Cargo.toml  build.rs
crates/metro-test-cli/src/: hermes.rs  main.rs  metro.rs
docker/topdanmark-linux/: Dockerfile  run-topdanmark.sh
docs/: WEEK-1-PROMPT.md  architecture.md  architecture.mmd  challenges.md  dependency-resolution.mmd  detail-bundling.mmd  detail-hermes.mmd  detail-mocking.mmd  flow.mmd  shadow-wrappers.md
examples/: basic.test.js  harness-test.js  trivial.test.js
examples/expo-app/: hermes-test.config.json  metro.config.js  package-lock.json  package.json  tsconfig.json
examples/expo-app/coverage/: lcov.info
examples/expo-app/src/: api.ts  array-utils.test.ts  array-utils.ts  bench-helpers.ts  hooks-1000.test.ts  hooks-50.test.ts  math.test.ts  math.ts  pure-10.test.ts  pure-50.test.ts  string-utils.test.ts  string-utils.ts  timeout.test.ts  useCounter.test.ts  useCounter.ts  useUser.ts  (+1 more)
website/: README.md  docusaurus.config.ts  sidebars.ts
website/docs/: index.md
(+113 files in other folders)
