[package]
name = "hermes-test-cli"
version = "1.0.4"
edition = "2021"

[[bin]]
name = "hermes-test"
path = "src/main.rs"

[features]
default = ["v8-engine"]
v8-engine = ["dep:v8"]
hermes-engine = []

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
notify = "7"
notify-debouncer-mini = "0.5"
regex = "1"
oxc = { version = "0.132", features = ["semantic"] }
libc = "0.2"
sourcemap = "9"
v8 = { version = "130", optional = true }

[build-dependencies]
cc = "1"
