[package]
name = "hermes-test-cli"
version = "1.1.6"
edition = "2021"

[[bin]]
name = "hermes-test"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
notify = "7"
notify-debouncer-mini = "0.5"
regex = "1"
oxc = { version = "0.132", features = ["semantic"] }
libc = "0.2"
sourcemap = "9"

[build-dependencies]
cc = "1"
